# mlops

./: .gitignore  README.md  Untitled.ipynb
.dvc/: config
DVC/: data.txt
DVC/data/: data.txt.dvc
End-to-End-MlOps/: README.md  pyproject.toml
End-to-End-MlOps/src/: main.py
LLM/: context_injection.py  langchain_wrapper.py  load_api.py  single_shot.py
Project-1/: Errors.txt  Readme.md  environment.yml  setup.py
Project-1/Terraform/: main.tf  provider.tf  readme.md  variables.tf
Project-1/artifacts/: test.csv  train.csv
Project-1/config/: config.yaml
Project-1/notebook/: notebook.ipynb
Project-1/src/: data-ingestion.py  data_preprocessing.py  logger.py  split.py
Project-1/utils/: common_functions.py
RAG/12thclass_RAG/: main.py  pyproject.toml
RAG/RAG System/: Welcome.md
Terraform/: main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
dvc_plots/: index.html
fastapi/: .gitignore  CRUD.py  main.py  pydantic.py
fullstack-app/saas/: package-lock.json  package.json  requirements.txt
fullstack-app/saas/api/: index.py
fullstack-app/saas/pages/: product.tsx
instant_project/: instant.py  requirements.txt
kubeflow/pipelines/: .gitignore  hello_pipeline.py  hello_pipeline.yaml  iris_eda_model.yaml  iris_ml_project.py
python-practice/classesobjectssolution/: Solution.ipynb
pytorch/: pytorch.ipynb
weather/: README.md  main.py
