[project]
name = "end-to-end-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.63.0",
    "fastapi>=0.118.3",
    "feast>=0.54.0",
    "flask>=3.1.2",
    "mlflow>=3.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
